domainagent/kubernetes/prometheus/prometheus-namespace.yaml
# prometheus-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
